--- a/css/estilos.css
+++ b/css/estilos.css
@@ -244,7 +244,7 @@ body {
     height: 300px;
     margin: 0 20px;
     border: 1px solid #fff;
-    box-shadow: -10px 18px 15px 0px #fff;
+    box-shadow: -8px 10px 10px #fff;
     border-radius: 20px;
 }
 
@@ -532,13 +532,20 @@ footer .social-desa h3 img {
     padding-right: 10px;
 }
 
-@media screen and (max-width: 375px) {
-    .contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas {
-        width: 320px;
-        margin: 0 50px;
+@media screen and (max-width: 425px) {
+    .contenido .mi_trabajo .formateo .sistemas_operativos .linux {
+        height: 250px;
     }
-    footer p {
-        padding: 15px;
+    .contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas {
+        width: 150px;
+        height: 180px;
+        margin: 0 10px;
+    }
+    .contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas img {
+        width: 50%;
+    }
+    .contenido .mi_trabajo .formateo .sistemas_operativos .windows .windows-distribuciones .sistemas {
+        margin: 0 50px;
     }
 }
 
@@ -653,6 +660,6 @@ footer .social-desa h3 img {
 
 @media screen and (max-width: 1024px) {
     .contenido .mi_trabajo .formateo .sistemas_operativos .windows .windows-distribuciones .sistemas {
-        width: 150px;
+        /* width: 150px; */
     }
 }
