--- a/css/estilos.css
+++ b/css/estilos.css
@@ -50,12 +50,12 @@ body {
     position: fixed;
     z-index: 2;
     margin: 10px;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
-    background-color: black;
+    background-color: #fdab01;
     color: #fff;
-    line-height: 40px;
+    line-height: 50px;
     text-align: center;
     right: 0;
 }
