--- a/css/estilos.css
+++ b/css/estilos.css
@@ -46,14 +46,15 @@ body {
 }
 
 .burger-button {
-    display: block;
+    display: none;
     position: fixed;
     z-index: 2;
     margin: 10px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: #fdab01;
+    /* background-color: #fdab01; */
+    background-color: rgba(253, 171, 1, .7);
     color: #fff;
     line-height: 50px;
     text-align: center;
@@ -628,8 +629,32 @@ footer .social-desa h3 img {
 }
 
 @media screen and (max-width: 600px) {
+    .burger-button {
+        display: block;
+    }
     .header {
         grid-template-columns: 1fr;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    .header #menu-h:nth-child(1) {
+        width: 350px;
+    }
+    .header #menu-h:nth-child(2),
+    #menu-h:nth-child(3),
+    #menu-h:nth-child(4),
+    #menu-h:nth-child(5) {
+        display: block;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr);
+        position: fixed;
+        z-index: 4;
+        background-color: rgba(253, 171, 1, .7);
+        right: 0;
+        margin-top: 40px;
+    }
+    .header #menu-h:nth-child(2) {
+        grid-row: 3;
     }
     .contenido {
         grid-template-columns: 1fr;
