--- a/css/estilos.css
+++ b/css/estilos.css
@@ -71,7 +71,7 @@ body {
     justify-items: center;
     align-items: center;
     position: relative;
-    z-index: 1;
+    z-index: 4;
 }
 
 .header #menu-h {
@@ -164,13 +164,17 @@ body {
     display: grid;
     justify-content: center;
     position: relative;
-    border-bottom: 5px solid gray;
-    border-bottom-style: dotted;
-    width: 100%;
+    z-index: 10;
+    padding: 20px;
+    width: 50%;
+    margin: 10px auto;
+    border: 2px solid #000;
+    box-shadow: 5px 5px 25px #419CCA;
+    border-radius: 50px;
 }
 
 .contenido .presentacion .preacce {
-    width: 10%;
+    width: 0;
     text-align: center;
     padding: 150px 150px;
     background-size: cover;
@@ -214,12 +218,10 @@ body {
 }
 
 .contenido .presentacion .iz {
-    display: none;
     left: 10px;
 }
 
 .contenido .presentacion .dere {
-    display: none;
     right: 10px;
 }
 
@@ -541,6 +543,7 @@ footer {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
     position: relative;
+    z-index: 5;
     background-color: #419CCA;
     border: 1px solid black;
     text-align: center;
@@ -647,7 +650,7 @@ footer .social-desa h3 img {
     #menu-h:nth-child(5) {
         grid-template-rows: repeat(4, 1fr);
         position: fixed;
-        z-index: 3;
+        z-index: 2;
         background-color: rgba(253, 171, 1, .7);
         right: 0;
         margin-top: 40px;
