--- a/css/main.css
+++ b/css/main.css
@@ -25,10 +25,12 @@ body {
 .home-main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr .2fr;
+    grid-template-rows: .5fr 1fr .4fr;
     gap: 10px;
     height: 100%;
 }
+
+.home-main:nth-child(7) {}
 
 .home-main img {
     margin: 0 10px;
@@ -37,8 +39,8 @@ body {
     height: 50px;
     grid-column: 1;
     grid-row: 3;
-    align-items: left;
-    justify-self: start;
+    justify-self: center;
+    align-self: center;
 }
 
 .home-main p {
@@ -94,71 +96,22 @@ body {
 
 /* vista para tablets y smartphones */
 
-@media screen and (max-width: 1080px) {
-    /* para que en los móviles ocupe todo el viewport, se debe colocar esto */
-    html,
-    body {
-        margin: 0;
-        padding: 0;
-        /* no se debe repetir el mismo código */
+@media screen and (max-width: 480px) {}
+
+@media screen and (max-width: 768px) {
+    .home-body .home-main .home-main-text {
+        font-size: 2em;
     }
-    .home-body .home-main {
-        /* position: fixed; */
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+    .home-body .home-main .enlaces .home-main-button {
+        width: 10px;
     }
-    .home-body .home-main img {
-        width: 450px;
-        height: 70px;
-        grid-column: 2;
-        grid-row: 3;
-        align-self: center;
-        justify-self: center;
-    }
-    .home-body .home-main p {
-        font-size: 5em;
-        /* border: 5px solid white;
-        box-shadow: 15px 15px 15px gray;
-        border-radius: 50px; */
-        padding: 30px;
-    }
-    .home-body .home-main .enlaces {
-        text-align: center;
-    }
-    .home-body .home-main .enlaces button {
-        width: 300px;
-        height: 100px;
-        /* margin-bottom: 100px; */
-        /* background-color: #e6182191;
-        border: 2px solid white;
-        box-shadow: 15px 15px 15px gray;
-        border-radius: 20px; */
-        margin-bottom: 30px;
-    }
-    .home-body .home-main .enlaces button a {
-        font-size: 3.6em;
-        text-decoration: none;
+    .home-body .home-main .enlaces .home-main-button a {
+        font-size: 10 em;
     }
 }
 
-
-/* 
-@media screen and (max-width: 768px) {
-    .home-main {
-        
+@media screen and (max-width: 1024px) {
+    .home-body .home-main .home-main-text {
+        font-size: 2rem;
     }
-    .home-main .enlaces button {
-        margin-bottom: 150px;
-    }
-    .home-main .enlaces button a {
-        font-size: 1.5em;
-    }
-    .home-main img {
-        height: 200px;
-        width: 600px;
-    }
-
-    .home-main p {
-        font-size: .5em;
-    }
-} */
+}
