--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,13 @@ body {
 
 /* vista para tablets y smartphones */
 
-@media screen and (max-width: 480px) {}
+@media screen and (max-width: 480px) {
+    .home-main .enlaces .home-main-button {
+        width: 400px;
+        height: 770px;
+        margin: 30px 0;
+    }
+}
 
 @media screen and (max-width: 768px) {}
 
