--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,9 @@ body {
 /* vista para tablets y smartphones */
 
 @media screen and (max-width: 480px) {
+    .home-main .home-main-text {
+        font-size: 4.5rem;
+    }
     .home-main .enlaces .home-main-button {
         width: 400px;
         height: 770px;
