--- a/css/main.css
+++ b/css/main.css
@@ -95,17 +95,23 @@ body {
         font-size: 4.5rem;
     }
     .home-main .enlaces .home-main-button {
-        width: 400px;
+        /* width: 400px;
         height: 770px;
-        margin: 30px 0;
+        margin: 30px 0; */
     }
 }
 
-@media screen and (max-width: 768px) {}
+@media screen and (max-width: 768px) {
+    .home-main img {
+        grid-column: 2;
+        grid-row: 3;
+    }
+}
 
 @media screen and (max-width: 1024px) {
     .home-main .home-main-text {
         font-size: 3.5rem;
+        margin-top: 50px;
     }
     .home-main .enlaces .home-main-button {
         width: 200px;
