--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,10 @@ body {
         height: 770px;
         margin: 30px 0; */
     }
+    .home-main img {
+        grid-column: 2;
+        grid-row: 3;
+    }
 }
 
 @media screen and (max-width: 768px) {
