--- a/css/perfil.css
+++ b/css/perfil.css
@@ -5,14 +5,21 @@ body {
 }
 
 .contenedor-header {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
+    display: flex;
     background-color: #419CCA;
     width: 100%;
     height: 60px;
     justify-items: center;
     align-items: center;
+}
+
+.contenedor-header:nth-child() {
+    margin: 0 50px;
+}
+
+.contenedor-header .header1:hover,
+.header2:hover {
+    background-color: red;
 }
 
 .contenedor-header .header1,
@@ -23,7 +30,7 @@ body {
 .contenedor-header .header1,
 .header2,
 a {
-    font-size: 1em;
+    font-size: 1.5rem;
     color: #fff;
     text-decoration: none;
     font-style: bold;
@@ -193,10 +200,22 @@ footer .desarrollador h3 img {
 
 /* estilos para dispositivos de menos resolucion */
 
+@media screen and (max-width: 480px) {
+    footer .desarrollador h3 {
+        font-size: .2em;
+    }
+}
+
 @media screen and (max-width: 1024px) {
     .contenedor-header {
-        height: 100px;
+        height: 150px;
         align-content: center;
+    }
+    .contenedor-header .header1 {
+        padding: 30px;
+    }
+    .contenedor-header .header3 {
+        padding: 30px;
     }
     .contenedor-header .header1,
     .header2,
@@ -224,11 +243,5 @@ footer .desarrollador h3 img {
     }
     footer .desarrollador h3 {
         font-size: .8em;
-    }
-}
-
-@media screen and (max-width: 424px) {
-    footer .desarrollador h3 {
-        font-size: .2em;
     }
 }
