Aumentando el tamaño de fuente del header

--- a/css/perfil.css
+++ b/css/perfil.css
@@ -216,6 +216,9 @@ footer .social-desa h3 img {
 /* estilos para dispositivos de menos resolucion */
 
 @media screen and (max-width: 480px) {
+    .contenedor-header .header1 {
+        font-size: 2em;
+    }
     footer .desarrollador h3 {
         font-size: .2em;
     }
