--- a/css/estilos.css
+++ b/css/estilos.css
@@ -559,7 +559,7 @@
     }
     
     footer .info-desa h3 {
-        font-size: .9em;
+        font-size: 1.5rem;
         color: white;
         margin-left: 80px;
         /* box-shadow: 2px 2px 2px gray; */
@@ -580,12 +580,13 @@
     }
     
     footer .social-desa a img {
-        width: 50px;
+        width: 10%;
         margin: 0 20px;
     }
     
     footer .social-desa h3 {
         color: white;
+        font-size: 1.5rem;
     }
     
     footer .social-desa h3 img {
@@ -633,6 +634,10 @@
         footer .social-desa h3 {
             font-size: .9em;
         }
+    }
+    
+    @media screen and (max-width: 483px) {
+        footer .social-desa a img {}
     }
     
     @media screen and (max-width: 768px) {
@@ -683,6 +688,7 @@
         }
         footer .info-desa h3 {
             margin-left: 0;
+            font-size: 1.2rem;
         }
         footer .info-desa h3 img {
             width: 40px;
@@ -692,15 +698,17 @@
             grid-template-rows: 1fr 1fr 1fr;
         }
         footer .social-desa h2 {
+            font-size: 1.4rem;
             grid-row: 1;
             grid-column: 2;
         }
         footer .social-desa h3 {
+            font-size: 1.2rem;
             grid-row: 2;
             grid-column: 2;
         }
         footer .social-desa a img {
-            width: 30px;
+            width: 20%;
             margin: 0 10px;
         }
     }
