--- a/css/estilos.css
+++ b/css/estilos.css
@@ -154,17 +154,69 @@
         position: relative;
     }
     
-    .contenido .slide-bienvenida {
-        background-color: aquamarine;
+    .contenido .container {
+        margin: 0 auto;
+        padding: 30px;
+        background-color: aqua;
         width: 100%;
-        height: 500px;
-        display: grid;
-        grid-template-rows: 1fr;
-        box-sizing: border-box;
-        margin-bottom: 70px;
+    }
+    
+    .contenido .container ul li {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
+    
+    .contenido .container ul.slider {
+        position: relative;
+        width: 800px;
+        height: 300px;
+    }
+    
+    .contenido .container ul.slider li {
+        position: absolute;
+        opacity: 0;
+        width: inherit;
+        height: inherit;
+        background-color: white;
+        transition: opacity 1s;
+    }
+    
+    .contenido .container ul.slider li img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+    }
+    
+    .contenido .container ul.slider li:first-child {
+        opacity: 1;
+    }
+    /* se va a poner la propiedad target para que cuando se opriman los números, se muestre la imagen correspondiente */
+    
+    .contenido .container ul.slider li:target {
+        opacity: 1;
+    }
+    
+    .contenido .container .menu {
         text-align: center;
-        align-items: center;
-        position: sticky;
+        margin-top: 60px;
+    }
+    
+    .contenido .container .menu li {
+        display: inline-block;
+        text-align: center;
+    }
+    
+    .contenido .container .menu li a {
+        display: inline-block;
+        color: white;
+        text-decoration: none;
+        background-color: grey;
+        padding: 10px;
+        width: 20px;
+        height: 20px;
+        font-size: 20px;
+        border-radius: 100%;
     }
     
     .contenido .presentacion {
@@ -403,8 +455,8 @@
         box-shadow: 15px 15px 10px #bababa;
         border-radius: 50px;
         display: grid;
-        position: relative;
         justify-content: center;
+        position: relative;
     }
     
     .contenido .mi_trabajo .formateo .programas .programas-varios {
@@ -661,24 +713,15 @@
             width: 50%;
         }
         .contenido .mi_trabajo .formateo .programas .programas-contenedor {
-            /* width: 100%; */
-            height: inherit;
-            /* margin: 0 auto; */
-            border: 5px solid gray;
-            border-radius: 15px;
-            box-shadow: 15px 15px 10px #bababa;
-            border-radius: 50px;
-            display: grid;
-            position: relative;
-            justify-content: center;
+            margin: 0;
+            width: 100%;
+        }
+        .contenido .mi_trabajo .formateo .programas .programas-contenedor .c1 {
+            width: 1px;
         }
         footer .social-desa h3 {
             font-size: .9em;
         }
-    }
-    
-    @media screen and (max-width: 483px) {
-        footer .social-desa a img {}
     }
     
     @media screen and (max-width: 768px) {
